Főoldal simítása, kisebb hibák kijavítása

--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
                 <div class="kategoriaSzuroDiv">
                     <h2>Product categories</h2>
                     <ul id="szuzoKategoriakOl">
-                        <li><a href="" class="SzuroAnchor">Accessories</a></li>
-                        <li><a href="" class="SzuroAnchor">Casual</a></li>
-                        <li><a href="" class="SzuroAnchor">Clothing</a></li>
-                        <li><a href="" class="SzuroAnchor">Men</a></li>
-                        <li><a href="" class="SzuroAnchor">Women</a></li>
+                        <li class="szuroLiClass"><a href="" class="SzuroAnchor">Accessories</a></li>
+                        <li class="szuroLiClass"><a href="" class="SzuroAnchor">Casual</a></li>
+                        <li class="szuroLiClass"><a href="" class="SzuroAnchor">Clothing</a></li>
+                        <li class="szuroLiClass"><a href="" class="SzuroAnchor">Men</a></li>
+                        <li><a href="" class="SzuroAnchor , NoBorder">Women</a></li>
                     </ul>
                 </div>
                 <div class="topRatedSzuroDiv">
@@ -194,19 +194,19 @@
                     <ul id="TopKategoriakUl">
                         <img src="./Weboldal képek/JeansJacket.jpeg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Jean Jacket</a></li>
-                        <p>$59.00</p>
+                        <p class="szuroLiClass">$59.00</p>
                         <img src="./Weboldal képek/BlackShorts.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Black Shorts</a></li>
-                        <p>$25.00</p>
+                        <p class="szuroLiClass">$25.00</p>
                         <img src="./Weboldal képek/LeatherJacket.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Leather Jacket</a></li>
-                        <p><s id="athuzott" class="AkcioS">$100.00</s id="athuzott"><s id="athuzott" class="Akciozott">$50.00</s id="athuzott"></p>
+                        <p class="szuroLiClass"><s id="athuzott" class="AkcioS">$100.00</s id="athuzott"><s id="athuzott" class="Akciozott">$50.00</s id="athuzott"></p>
                         <img src="./Weboldal képek/WomenTops.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Women Tops</a></li>
-                        <p>$45.00</p>
+                        <p class="szuroLiClass">$45.00</p>
                         <img src="./Weboldal képek/CollarTShirt.jpg" class="TopKep" alt="" srcset="">
-                        <li><a href="" class="TopAnchor">Collar T-Shirt</a></li>
-                        <p>$35.00</p>
+                        <li ><a href="" class="TopAnchor">Collar T-Shirt</a></li>
+                        <p>$35.00</p style="border-bottom:0px solid white">
                     </ul>
                 </div>
             </div>
