IK-12 kártyák javítása

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src=".//printedtops.png" class="kartyaKepek">
+                            <img src="./TermekKartyak/PrintedTops.jpg" class="kartyaKepek">
                             <div class="alja">
                                 <h1>Printed Tops</h1>
                             <p class="price">$75.00</p>
@@ -134,7 +134,7 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
-                            <img src="./ruhakepek/womentops.jpg" alt="womentops" class="kartyaKepek">
+                            <img src="./TermekKartyak/feherPoloLatina.jpg" alt="womentops" class="kartyaKepek">
                             <div class="alja">
                                 <h1>Women Tops</h1>
                             <p class="price">$45.00</p>
