IK-12 VisszaBTN alakítása

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
         </div>
 
-        <button onclick="window.location.href='#top'" class="visszaBTN">↑</button>
+        <button onclick="window.location.href='#top'" class="visszaBTN">⬆</button>
 
     </footer>
 
