Menü, kártyák finomítása

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
+                            <div class="KartyaSaleDiv">
+                                <p class="KartyaSaleP">Sale!</p>
+                            </div>
                             <img src="./TermekKartyak/sapkasarga.jpg" alt="ladieshat" class="kartyaKepek">
                             <div class="alja">
                                 <h1>Ladies Hat</h1>
@@ -112,6 +115,9 @@
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
+                            <div class="KartyaSaleDiv">
+                                <p class="KartyaSaleP">Sale!</p>
+                            </div>
                             <img src="./TermekKartyak/kabatnigger.jpg" alt="leatherjacket" class="kartyaKepek">
                             <div class="alja">
                                 <h1 id="LeatherJ">Leather Jacket</h1>
