IK-12 footer és menü finomítása

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 <div class="dropdown">
                     <p href="./HTML/home.html" class="menuLinks" id="dropbtn">shop<span class="menuNyil">▾</span></p>
                         <div class="dropdownMain">
-                            <a href="./HTML/myaccount.html" class="dropdownLinks">all</a>
-                            <a href="./HTML/myaccount.html" class="dropdownLinks">sales</a>
-                            <a href="./HTML/myaccount.html" class="dropdownLinks">male</a>
-                            <a href="./HTML/myaccount.html" class="dropdownLinks">female</a>
-                            <a href="./HTML/myaccount.html" class="dropdownLinks">kids</a>
+                            <a href="./HTML/myaccount.html" class="dropdownLinks">accessories</a>
+                            <a href="./HTML/myaccount.html" class="dropdownLinks">casual</a>
+                            <a href="./HTML/myaccount.html" class="dropdownLinks">clothing</a>
+                            <a href="./HTML/myaccount.html" class="dropdownLinks">men</a>
+                            <a href="./HTML/myaccount.html" class="dropdownLinks">women</a>
     
     
                         </div>
