--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                         </div>
                     </div>
                 </div>
+                <button>Add to cart</button>
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
@@ -99,6 +100,7 @@
                         </div>
                     </div>
                 </div>
+                <button>Add to cart</button>
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
@@ -112,6 +114,7 @@
                         </div>
                     </div>
                 </div>
+                <button>Add to cart</button>
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
@@ -126,6 +129,7 @@
                         </div>
                     </div>
                 </div>
+                <button>Add to cart</button>
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
@@ -137,6 +141,7 @@
                         </div>
                     </div>
                 </div>
+                <button>Add to cart</button>
                 <div class="kartyak">
                     <div class="column">
                         <div class="card">
@@ -148,6 +153,7 @@
                         </div>
                     </div>
                 </div>
+                <button>Add to cart</button>
             </div>
         </div>
         <div class="jobb">
