--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="card">
                             <div class="card-container">
                                 <img src="./TermekKartyak/niggercollarshirt.jpg" alt="Collar T-Shirt" class="kartyaKepek">
-                            <div class="add-to-cart">Add to Cart</div>
+                            <div class="add-to-cart">add to cart</div>
                             </div>
                             <div class="alja">
                                 <h1>Collar T-Shirt</h1>
@@ -97,7 +97,7 @@
                         <div class="card">
                             <div class="card-container">
                             <img src="./TermekKartyak/polonigger.jpg" alt="gentstshirt" class="kartyaKepek">
-                            <div class="add-to-cart">Add to Cart</div>
+                            <div class="add-to-cart">add to cart</div>
                             </div>
                             <div class="alja">
                                 <h1>Gents T-shirt</h1>
@@ -115,7 +115,7 @@
                             </div>
                             <div class="card-container">
                             <img src="./TermekKartyak/sapkasarga.jpg" alt="ladieshat" class="kartyaKepek">
-                            <div class="add-to-cart">Add to Cart</div>
+                            <div class="add-to-cart">add to cart</div>
                             </div>
                             <div class="alja">
                                 <h1>Ladies Hat</h1>
@@ -132,7 +132,7 @@
                             </div>
                             <div class="card-container">
                             <img src="./TermekKartyak/kabatnigger.jpg" alt="leatherjacket" class="kartyaKepek">
-                            <div class="add-to-cart">Add to Cart</div>
+                            <div class="add-to-cart">add to cart</div>
                             </div>
                             <div class="alja">
                                 <h1 id="LeatherJ">Leather Jacket</h1>
@@ -147,7 +147,7 @@
                         <div class="card">
                             <div class="card-container">
                             <img src="./TermekKartyak/PrintedTops.jpg" class="kartyaKepek">
-                            <div class="add-to-cart">Add to Cart</div>
+                            <div class="add-to-cart">add to cart</div>
                             </div>
                             <div class="alja">
                                 <h1>Printed Tops</h1>
@@ -162,7 +162,7 @@
                         <div class="card">
                             <div class="card-container">
                             <img src="./TermekKartyak/feherPoloLatina.jpg" alt="womentops" class="kartyaKepek">
-                            <div class="add-to-cart">Add to Cart</div>
+                            <div class="add-to-cart">add to cart</div>
                             </div>
                             <div class="alja">
                                 <h1>Women Tops</h1>
