--- a/index.html
+++ b/index.html
@@ -222,19 +222,19 @@
                 <div class="topRatedSzuroDiv">
                     <h2>Top rated products</h2>
                     <ul id="TopKategoriakUl">
-                        <img src="./Weboldal képek/JeansJacket.jpeg" class="TopKep" alt="" srcset="">
-                        <li><a href="" class="TopAnchor">Jean Jacket</a></li>
+                        <img src="./TermekKartyak/jeansjacket.jpg" class="TopKep" alt="" srcset="">
+                        <li><a href="" class="TopAnchor">Jeans Jacket</a></li>
                         <p class="szuroLiClass">$59.00</p>
-                        <img src="./Weboldal képek/BlackShorts.jpg" class="TopKep" alt="" srcset="">
+                        <img src="./TermekKartyak/pulcsinigger.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Black Shorts</a></li>
                         <p class="szuroLiClass">$25.00</p>
-                        <img src="./Weboldal képek/LeatherJacket.jpg" class="TopKep" alt="" srcset="">
+                        <img src="./TermekKartyak/kabatnigger.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Leather Jacket</a></li>
                         <p class="szuroLiClass"><s id="athuzott" class="AkcioS">$100.00</s id="athuzott"><s id="athuzott" class="Akciozott">$50.00</s id="athuzott"></p>
-                        <img src="./Weboldal képek/WomenTops.jpg" class="TopKep" alt="" srcset="">
+                        <img src="./TermekKartyak/feherPoloLatina.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Women Tops</a></li>
                         <p class="szuroLiClass">$45.00</p>
-                        <img src="./Weboldal képek/CollarTShirt.jpg" class="TopKep" alt="" srcset="">
+                        <img src="./TermekKartyak/niggercollarshirt.jpg" class="TopKep" alt="" srcset="">
                         <li ><a href="" class="TopAnchor">Collar T-Shirt</a></li>
                         <p>$35.00</p style="border-bottom:0px solid white">
                     </ul>
