Html felesleges sorok törlése, add to cart finomitás

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                         <div class="card">
                             <div class="card-container">
                                 <img src="./TermekKartyak/niggercollarshirt.jpg" alt="Collar T-Shirt" class="kartyaKepek">
+                                
                             <div class="add-to-cart">add to cart</div>
                             </div>
                             <div class="alja">
@@ -135,7 +136,7 @@
                             <div class="add-to-cart">add to cart</div>
                             </div>
                             <div class="alja">
-                                <h1 id="LeatherJ">Leather Jacket</h1>
+                                <h1>Leather Jacket</h1>
                                 <p class="price"><s id="athuzott">$100.00</s>$50.00</p>
                             </div>
                         </div>
