IK-12 Add to cart gomb javítása

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <div class="card-container">
                                 <img src="./TermekKartyak/niggercollarshirt.jpg" alt="Collar T-Shirt" class="kartyaKepek">
                                 
-                            <div class="add-to-cart">add to cart</div>
+                            <a href="" class="add-to-cart">add to cart</a>
                             </div>
                             <div class="alja">
                                 <h1>Collar T-Shirt</h1>
@@ -99,7 +99,7 @@
                         <div class="card">
                             <div class="card-container">
                             <img src="./TermekKartyak/polonigger.jpg" alt="gentstshirt" class="kartyaKepek">
-                            <div class="add-to-cart">add to cart</div>
+                            <a href="" class="add-to-cart">add to cart</a>
                             </div>
                             <div class="alja">
                                 <h1>Gents T-shirt</h1>
@@ -117,7 +117,7 @@
                             </div>
                             <div class="card-container">
                             <img src="./TermekKartyak/sapkasarga.jpg" alt="ladieshat" class="kartyaKepek">
-                            <div class="add-to-cart">add to cart</div>
+                            <a href="" class="add-to-cart">add to cart</a>
                             </div>
                             <div class="alja">
                                 <h1>Ladies Hat</h1>
@@ -134,7 +134,7 @@
                             </div>
                             <div class="card-container">
                             <img src="./TermekKartyak/kabatnigger.jpg" alt="leatherjacket" class="kartyaKepek">
-                            <div class="add-to-cart">add to cart</div>
+                            <a href="#" class="add-to-cart">add to cart</a>
                             </div>
                             <div class="alja">
                                 <h1>Leather Jacket</h1>
@@ -149,7 +149,7 @@
                         <div class="card">
                             <div class="card-container">
                             <img src="./TermekKartyak/PrintedTops.jpg" class="kartyaKepek">
-                            <div class="add-to-cart">add to cart</div>
+                            <a href="" class="add-to-cart">add to cart</a>
                             </div>
                             <div class="alja">
                                 <h1>Printed Tops</h1>
@@ -164,7 +164,7 @@
                         <div class="card">
                             <div class="card-container">
                             <img src="./TermekKartyak/feherPoloLatina.jpg" alt="womentops" class="kartyaKepek">
-                            <div class="add-to-cart">add to cart</div>
+                            <a href="" class="add-to-cart">add to cart</a>
                             </div>
                             <div class="alja">
                                 <h1>Women Tops</h1>
@@ -263,7 +263,7 @@
         <div class="footDivJobb">
             
             <p class="footDivTeto"> <img src="./Weboldal képek/returnIcon.png" alt="email" class="contactKepek">Free Shipping & Return</p>
-            <p class="contact">Free shipping above $99</p>
+            <p class="contact">Free shipping on all orders above $99</p>
 
             <p class="footDivTeto"> <img src="./Weboldal képek/walletIcon.webp" alt="email" class="contactKepek">Money Back Guarantee</p>
             <p class="contact"> <img src="" alt="">100% money back guarantee</p>
