Kártyán a kis ikonok elhelyezése, formázása

--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
                         <div class="card">
                             <div class="card-container">
                                 <img src="./TermekKartyak/niggercollarshirt.jpg" alt="Collar T-Shirt" class="kartyaKepek">
-                                
+                                <div class="ikonok">
+                                    <div class="szivikon"><img src="./TermekKartyak/sziv.png" alt=""></div>
+                                    <div class="szemikon"><img src="./TermekKartyak/szem.png" alt=""></div>
+                                </div>
                             <div class="add-to-cart">add to cart</div>
                             </div>
                             <div class="alja">
@@ -99,6 +102,10 @@
                         <div class="card">
                             <div class="card-container">
                             <img src="./TermekKartyak/polonigger.jpg" alt="gentstshirt" class="kartyaKepek">
+                            <div class="ikonok">
+                                <div class="szivikon"><img src="./TermekKartyak/sziv.png" alt=""></div>
+                                <div class="szemikon"><img src="./TermekKartyak/szem.png" alt=""></div>
+                            </div>
                             <div class="add-to-cart">add to cart</div>
                             </div>
                             <div class="alja">
@@ -117,6 +124,10 @@
                             </div>
                             <div class="card-container">
                             <img src="./TermekKartyak/sapkasarga.jpg" alt="ladieshat" class="kartyaKepek">
+                            <div class="ikonok">
+                                <div class="szivikon"><img src="./TermekKartyak/sziv.png" alt=""></div>
+                                <div class="szemikon"><img src="./TermekKartyak/szem.png" alt=""></div>
+                            </div>
                             <div class="add-to-cart">add to cart</div>
                             </div>
                             <div class="alja">
@@ -134,6 +145,10 @@
                             </div>
                             <div class="card-container">
                             <img src="./TermekKartyak/kabatnigger.jpg" alt="leatherjacket" class="kartyaKepek">
+                            <div class="ikonok">
+                                <div class="szivikon"><img src="./TermekKartyak/sziv.png" alt=""></div>
+                                <div class="szemikon"><img src="./TermekKartyak/szem.png" alt=""></div>
+                            </div>
                             <div class="add-to-cart">add to cart</div>
                             </div>
                             <div class="alja">
@@ -149,6 +164,10 @@
                         <div class="card">
                             <div class="card-container">
                             <img src="./TermekKartyak/PrintedTops.jpg" class="kartyaKepek">
+                            <div class="ikonok">
+                                <div class="szivikon"><img src="./TermekKartyak/sziv.png" alt=""></div>
+                                <div class="szemikon"><img src="./TermekKartyak/szem.png" alt=""></div>
+                            </div>
                             <div class="add-to-cart">add to cart</div>
                             </div>
                             <div class="alja">
@@ -164,6 +183,10 @@
                         <div class="card">
                             <div class="card-container">
                             <img src="./TermekKartyak/feherPoloLatina.jpg" alt="womentops" class="kartyaKepek">
+                            <div class="ikonok">
+                                <div class="szivikon"><img src="./TermekKartyak/sziv.png" alt=""></div>
+                                <div class="szemikon"><img src="./TermekKartyak/szem.png" alt=""></div>
+                            </div>
                             <div class="add-to-cart">add to cart</div>
                             </div>
                             <div class="alja">
