Sale felirat megjavítása a kártyákon

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                 
                 <div class="kartyak">
                     <div class="column">
+                        <span class="KartyaSaleDiv">
+                            <p class="KartyaSaleP">Sale!</p>
+                        </span>
                         <div class="card">
-                            <div class="KartyaSaleDiv">
-                                <p class="KartyaSaleP">Sale!</p>
-                            </div>
                             <div class="card-container">
                             <img src="./TermekKartyak/sapkasarga.jpg" alt="ladieshat" class="kartyaKepek">
                             <div class="ikonok">
@@ -143,10 +143,10 @@
                 
                 <div class="kartyak">
                     <div class="column">
+                        <div class="KartyaSaleDiv">
+                            <p class="KartyaSaleP">Sale!</p>
+                        </div>
                         <div class="card">
-                            <div class="KartyaSaleDiv">
-                                <p class="KartyaSaleP">Sale!</p>
-                            </div>
                             <div class="card-container">
                             <img src="./TermekKartyak/kabatnigger.jpg" alt="leatherjacket" class="kartyaKepek">
                             <div class="ikonok">
