Footer elrendezés javítása

--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
         <div class="footDivJobb">
             
             <p class="footDivTeto"> <img src="./Weboldal képek/returnIcon.png" alt="email" class="contactKepek">Free Shipping & Return</p>
-            <p class="contact">Free shipping on all orders above $99</p>
+            <p class="contact jobbSzoveg">Free shipping on all orders above $99</p>
 
             <p class="footDivTeto"> <img src="./Weboldal képek/walletIcon.webp" alt="email" class="contactKepek">Money Back Guarantee</p>
-            <p class="contact"> <img src="" alt="">100% money back guarantee</p>
+            <p class="contact jobbSzoveg"> <img src="" alt="">100% money back guarantee</p>
 
 
         </div>
