--- a/index.html
+++ b/index.html
@@ -292,13 +292,13 @@
         </div>
         <div class="footDivKoz">
             <p class="footDivTeto">Contact Us</p>
-            <p class="contact"> <img src="./Weboldal képek/hazikoIcon.webp" alt="email" class="contactKepek"> csudajoshop@gmail.com</p>
+            <p class="contact"> <img src="./Weboldal képek/hazikoIcon.webp" alt="szekhely" class="contactKepek">6500 Baja, Bácska tér 1.</p>
             <p class="contact"> <img src="./Weboldal képek/emailIcon.png" alt="email" class="contactKepek"> info@csudajoshop.com</p>
-            <p class="contact"> <img src="./Weboldal képek/teloIcon.png" alt="email" class="contactKepek"> support@csudajoshop.com</p>
+            <p class="contact"> <img src="./Weboldal képek/teloIcon.png" alt="telefon" class="contactKepek"> +36 30 116 123</p>
         </div>
         <div class="footDivJobb">
             
-            <p class="footDivTeto"> <img src="./Weboldal képek/returnIcon.png" alt="email" class="contactKepek">Free Shipping & Return</p>
+            <p class="footDivTeto"> <img src="./Weboldal képek/returnIcon.png" alt="email" class="contactKepek ">Free Shipping & Return</p>
             <p class="contact jobbSzoveg">Free shipping on all orders above $99</p>
 
             <p class="footDivTeto"> <img src="./Weboldal képek/walletIcon.webp" alt="email" class="contactKepek">Money Back Guarantee</p>
