IK-21 Shop Mobil nézet

--- a/index.html
+++ b/index.html
@@ -32,16 +32,27 @@
                 <div id="mobilMenu">
                     <div class="mobilTartalom">
                         <a href="./HTML/home.html" class="MobilmenuLinks">Home</a>
-                        <a href="./index.html" class="MobilmenuLinks">Shop</a>
-                        <div class="dropdownMobil">
+                        <div class="MobilmenuLinksSplit">
+                            <a href="./index.html" class="MobilmenuLinks">Shop</a>
+
+                            <div class="hamburgerAloldal" onclick="HambiLenyilasAloldal()">
+                                <span></span>
+                                <span></span>
+                            </div>
+                        <div id="dropdownMobil">
                             <a href="./HTML/myaccount.html" class="MobilmenuLinks">accessories</a>
                             <a href="./HTML/myaccount.html" class="MobilmenuLinks">casual</a>
                             <a href="./HTML/myaccount.html" class="MobilmenuLinks">clothing</a>
                             <a href="./HTML/myaccount.html" class="MobilmenuLinks">men</a>
                             <a href="./HTML/myaccount.html" class="MobilmenuLinks">women</a>  
-                        </div>   
+                        </div> 
+                        </div>
                         <a href="./HTML/myaccount.html" class="MobilmenuLinks">My Account</a>
-                        <div class="dropdownMobil">
+                        <div class="hamburgerAloldal">
+                            <span></span>
+                            <span></span>
+                        </div>
+                        <div id="dropdownMobil">
                             <a href="./HTML/myaccount.html" class="MobilmenuLinks">Account details</a>
                             <a href="./HTML/myaccount.html" class="MobilmenuLinks">Log out</a>
                             <a href="./HTML/myaccount.html" class="MobilmenuLinks">Coupons</a>
