IK-21 mobil menu ujratervezés

--- a/index.html
+++ b/index.html
@@ -29,39 +29,61 @@
 
 
             <!--Mobil nézet-->
-                <div id="mobilMenu">
-                    <div class="mobilTartalom">
-                        <a href="./HTML/home.html" class="MobilmenuLinks">Home</a>
-                        <div class="MobilmenuLinksSplit">
-                            <a href="./index.html" class="MobilmenuLinks">Shop</a>
+            <div id="mobilMenu">
+                <ul class="egeszMobil">
+                        <li class="menuItem">
+                            <a href="./HTML/home.html" class="mobilMenuLinks">home</a>
+                        </li>
+                    <li class="menuItem">
+                        <a href="./index.html" class="mobilMenuLinks">shop</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/myaccount.html" class="MobilDropdown">accessories</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/myaccount.html" class="MobilDropdown">casual</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/myaccount.html" class="MobilDropdown">casual</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/myaccount.html" class="MobilDropdown">casual</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/myaccount.html" class="MobilDropdown">casual</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/myaccount.html" class="MobilDropdown">casual</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/myaccount.html" class="MobilDropdown">casual</a>
+                    </li>
 
-                            <div class="hamburgerAloldal" onclick="HambiLenyilasAloldal()">
-                                <span></span>
-                                <span></span>
-                            </div>
-                        <div id="dropdownMobil">
-                            <a href="./HTML/myaccount.html" class="MobilmenuLinks">accessories</a>
-                            <a href="./HTML/myaccount.html" class="MobilmenuLinks">casual</a>
-                            <a href="./HTML/myaccount.html" class="MobilmenuLinks">clothing</a>
-                            <a href="./HTML/myaccount.html" class="MobilmenuLinks">men</a>
-                            <a href="./HTML/myaccount.html" class="MobilmenuLinks">women</a>  
-                        </div> 
-                        </div>
-                        <a href="./HTML/myaccount.html" class="MobilmenuLinks">My Account</a>
-                        <div class="hamburgerAloldal">
-                            <span></span>
-                            <span></span>
-                        </div>
-                        <div id="dropdownMobil">
-                            <a href="./HTML/myaccount.html" class="MobilmenuLinks">Account details</a>
-                            <a href="./HTML/myaccount.html" class="MobilmenuLinks">Log out</a>
-                            <a href="./HTML/myaccount.html" class="MobilmenuLinks">Coupons</a>
-                        </div>        
-                        <a href="./HTML/blog.html" class="MobilmenuLinks">Blog</a>
-                        <a href="./HTML/contact.html" class="MobilmenuLinks">Contact Us</a>
-                    </div>
-                </div>
-            
+                    <li class="menuItem">
+                        <a href="./HTML/myaccount.html" class="mobilMenuLinks">casual</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/myaccount.html" class="MobilDropdown">casual</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/myaccount.html" class="MobilDropdown">casual</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/myaccount.html" class="MobilDropdown">casual</a>
+                    </li>
+                    <li class="menuItem">
+
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/myaccount.html" class="mobilMenuLinks">casual</a>
+                    </li>
+                    <li class="menuItem">
+                        <a href="./HTML/myaccount.html" class="mobilMenuLinks">casual</a>
+                    </li>
+                </ul>
+            </div>
+
+
             <div class="foMenu">
                 <!--Asztali nézet-->
                 <div class="asztaliNezet">
