--- a/index.html
+++ b/index.html
@@ -40,41 +40,39 @@
                         <a href="./index.html" class="mobilMenuLinks">shop</a>
                         <a class="lenyit"><i class="fa fa-plus"></i></a>
                     </li>
-                    <li class="menuItem">
+                    <li class="menuItemDropdown1">
                         <a href="./HTML/myaccount.html" class="MobilDropdown">accessories</a>
                     </li>
-                    <li class="menuItem">
+                    <li class="menuItemDropdown1">
                         <a href="./HTML/myaccount.html" class="MobilDropdown">casual</a>
                     </li>
-                    <li class="menuItem">
+                    <li class="menuItemDropdown1">
                         <a href="./HTML/myaccount.html" class="MobilDropdown">clothing</a>
                     </li>
-                    <li class="menuItem">
+                    <li class="menuItemDropdown1">
                         <a href="./HTML/myaccount.html" class="MobilDropdown">men</a>
                     </li>
-                    <li class="menuItem">
+                    <li class="menuItemDropdown1">
                         <a href="./HTML/myaccount.html" class="MobilDropdown">women</a>
                     </li>
                     <li class="menuItem">
-                        <a href="./HTML/myaccount.html" class="mobilMenuLinks">casual</a>
+                        <a href="./HTML/myaccount.html" class="mobilMenuLinks">my account</a>
+                        <a class="lenyit2"><i class="fa fa-plus"></i></a>
+                    </li>
+                    <li class="menuItemDropdown2">
+                        <a href="./HTML/myaccount.html" class="MobilDropdown">account details</a>
+                    </li>
+                    <li class="menuItemDropdown2">
+                        <a href="./HTML/myaccount.html" class="MobilDropdown">log out</a>
+                    </li>
+                    <li class="menuItemDropdown2">
+                        <a href="./HTML/myaccount.html" class="MobilDropdown">coupons</a>
                     </li>
                     <li class="menuItem">
-                        <a href="./HTML/myaccount.html" class="MobilDropdown">casual</a>
+                        <a href="./HTML/myaccount.html" class="mobilMenuLinks">blog</a>
                     </li>
                     <li class="menuItem">
-                        <a href="./HTML/myaccount.html" class="MobilDropdown">casual</a>
-                    </li>
-                    <li class="menuItem">
-                        <a href="./HTML/myaccount.html" class="MobilDropdown">casual</a>
-                    </li>
-                    <li class="menuItem">
-
-                    </li>
-                    <li class="menuItem">
-                        <a href="./HTML/myaccount.html" class="mobilMenuLinks">casual</a>
-                    </li>
-                    <li class="menuItem">
-                        <a href="./HTML/myaccount.html" class="mobilMenuLinks">casual</a>
+                        <a href="./HTML/myaccount.html" class="mobilMenuLinks">contact us</a>
                     </li>
                 </ul>
             </div>
