Több blog poszt hozzáadása, egymástól függésük, gomb animációjának elkezdése

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -65,12 +65,50 @@
     <div class="FoDiv">
         <div class="BalBlogDiv">
             <h2>Blog</h2>
+            <a href="">            
+            <span class="BalBlogCimSpan">
+                <p class="BalBlogCímP">Új ajánlatok</p>
+                <p class="BalBlogDatumP">2025.01.22</p>
+            </span>
             <div class="BalKepDivClass">
                 <img src="../Blog képek/aaaaaaa2.jpg" class="BalKepClass" alt="" srcset="">
                 <p class="BlogP">Ha valami különlegeset keresel, amit sehol máshol nem találsz, látogass el hozzánk! Itt minden termék egyedi és személyre szabott, legyen szó varázslatos könyvekről, ritka kincsekről vagy egy-egy mesebeli kiegészítőről. Minden sarkon új meglepetés vár, és garantáltan találkozhatsz olyan tárgyakkal, amelyek megváltoztatják a napodat. Gyere el és engedd, hogy a fantáziád szárnyaljon!
                 </p>
                 <hr>
-            </div>
+            </div></a>
+
+
+
+            <a href="">
+                <span class="BalBlogCimSpan">
+                    <p class="BalBlogCímP">WEBSHOP</p>
+                    <p class="BalBlogDatumP">2024.12.08</p>
+                </span>
+                <div class="BalKepDivClass">
+                    <img src="../Blog képek/webshop.png" class="BalKepClass" alt="" srcset="">
+                    <p class="BlogP">Kedves Vásárlóink!
+    
+                        Örömmel értesítünk benneteket, hogy végre elindítottuk az új webshopunkat! Mostantól még könnyebben és kényelmesebben vásárolhattok kedvenc termékeinkből, mindössze néhány kattintással, akár otthonról, akár úton! 😊
+                    </p>
+                    <hr>
+                </div>
+            </a>
+
+
+            <a href="">
+                <span class="BalBlogCimSpan">
+                    <p class="BalBlogCímP">Hatalmas Karácsonyi Akciók</p>
+                    <p class="BalBlogDatumP">2024.12.24</p>
+                </span>
+                <div class="BalKepDivClass">
+                    <img src="../Blog képek/aaa3.jfif" class="BalKepClass" alt="" srcset="">
+                    <p class="BlogP">Kedves Vásárlóink!
+                        Az év legvarázslatosabb időszaka elérkezett, és mi szeretnénk segíteni abban, hogy az ünnepi készülődés még különlegesebb legyen! 🌟 A Csudajó Áruház webshopjában most indulnak a Karácsonyi Akcióink, ahol fantasztikus kedvezményekkel várunk Titeket!
+                    </p>
+                    <hr>
+                </div>
+            </a>
+
             
         </div>
         <div class="JobbBlogDiv">
@@ -87,6 +125,34 @@
             </div>
             <div class="JobbKepDivClass">
                 <img src="../Blog képek/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.jpg" class="JobbKepClass" alt="" srcset="">
+                <div class="JobbKicsiNagyDiv">
+                    <div class="JobbKicsiBal">
+                        <h3>Blog címe</h3>
+                        <h4>Dátuma</h4>
+                    </div class="JobbKicsiBal">
+                    <div class="JobbKicsiJobb">
+                        <button class="JobbKicsiGomb">READ MORE</button>
+                    </div>
+                </div>
+                <hr>
+                <p class="hidden">a</p>
+            </div>
+            <div class="JobbKepDivClass">
+                <img src="../Blog képek/ruha3.jpg" class="JobbKepClass" alt="" srcset="">
+                <div class="JobbKicsiNagyDiv">
+                    <div class="JobbKicsiBal">
+                        <h3>Blog címe</h3>
+                        <h4>Dátuma</h4>
+                    </div class="JobbKicsiBal">
+                    <div class="JobbKicsiJobb">
+                        <button class="JobbKicsiGomb">READ MORE</button>
+                    </div>
+                </div>
+                <hr>
+                <p class="hidden">a</p>
+            </div>
+            <div class="JobbKepDivClass">
+                <img src="../Blog képek/ruha4.jpg" class="JobbKepClass" alt="" srcset="">
                 <div class="JobbKicsiNagyDiv">
                     <div class="JobbKicsiBal">
                         <h3>Blog címe</h3>
@@ -130,5 +196,6 @@
     </footer>
 
 <script src="./main.js"></script>
+<script src="../blog.js"></script>
 </body>
 </html>
