--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
                         <a href="./HTML/myaccount.html" class="MobilDropdown">account details</a>
                     </li>
                     <li class="menuItemDropdown2">
-                        <a href="./HTML/myaccount.html" class="MobilDropdown">log out</a>
+                        <a href="./HTML/logout.html" class="MobilDropdown">log out</a>
                     </li>
                     <li class="menuItemDropdown2">
-                        <a href="./HTML/myaccount.html" class="MobilDropdown">coupons</a>
+                        <a href="./HTML/coupons.html" class="MobilDropdown">coupons</a>
                     </li>
                     <li class="menuItem">
-                        <a href="./HTML/myaccount.html" class="mobilMenuLinks">blog</a>
+                        <a href="./HTML/blog.html" class="mobilMenuLinks">blog</a>
                     </li>
                     <li class="menuItem">
-                        <a href="./HTML/myaccount.html" class="mobilMenuLinks">contact us</a>
+                        <a href="./HTML/" class="mobilMenuLinks">contact us</a>
                     </li>
                 </ul>
             </div>
@@ -97,7 +97,7 @@
                         <div class="dropdownMain">
                             <a href="./HTML/myaccount.html" class="dropdownLinks">Account details</a>
                             <a href="./HTML/myaccount.html" class="dropdownLinks">Log out</a>
-                            <a href="./HTML/myaccount.html" class="dropdownLinks">Coupons</a>
+                            <a href="./HTML/coupons.html" class="dropdownLinks">Coupons</a>
                         </div>
                     </div>
         
