IK-26, IK-27 Coupon oldal elkészítése két nézetben

--- a/HTML/coupons.html
+++ b/HTML/coupons.html
@@ -23,7 +23,7 @@
                 <p class="oldalnev">Csudajó Áruház</p>
                 <p class="motto">Fedezd fel a lehetetlent!</p>
             </div>
-            <div class="hamburger" onclick="HambiLenyilas()">
+            <div class="hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -37,7 +37,7 @@
                             <a href="./HTML/home.html" class="mobilMenuLinks">home</a>
                         </li>
                     <li class="menuItem">
-                        <a href="/IKTAruhaz/index.html" class="mobilMenuLinks">shop</a>
+                        <a href="../index.html" class="mobilMenuLinks">shop</a>
                         <a class="lenyit"><i class="fa fa-plus"></i></a>
                     </li>
                     <li class="menuItemDropdown1">
@@ -119,10 +119,47 @@
         <div class="couponMain">
             <div class="szoveg">
                 <h1>Kari ari csak neked számodra!</h1>
-                <p class="couponLeiras">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam adipisci culpa error temporibus molestias est, impedit, officiis aliquam tempore rerum corporis deserunt explicabo voluptates facere repellat. Necessitatibus dignissimos maiores nulla.</p>
-            </div>
-            <img src="../Home képek/homelanding.jpg" alt="" class="couponPic">
+                <p class="couponLeiras">Az karácsony a szeretet ünnepe. Lepj meg valakit egy csodálatos ajándékkal amit minden nap magán hordhat! Ezzel a kuponnal 15% kedvezményt biztosítunk bármely termék árából a webshopon. Felhasználható 2024. december 31-ig.</div>
+                <button>Beváltom</button>
+                <div class="kep">
+                    <img src="../Home képek/homelanding.jpg" alt="" class="couponPic">
+                    <p class="kedvezmeny">15%</p>
+                </div>
         </div>
+
+        <div class="couponMain">
+            <div class="szoveg">
+                <h1>Kari ari csak neked számodra!</h1>
+                <p class="couponLeiras">Az karácsony a szeretet ünnepe. Lepj meg valakit egy csodálatos ajándékkal amit minden nap magán hordhat! Ezzel a kuponnal 15% kedvezményt biztosítunk bármely termék árából a webshopon. Felhasználható 2024. december 31-ig.</div>
+                <button>Beváltom</button>
+                <div class="kep">
+                    <img src="../Home képek/homelanding.jpg" alt="" class="couponPic">
+                    <p class="kedvezmeny">15%</p>
+                </div>
+        </div>
+
+        <div class="couponMain">
+            <div class="szoveg">
+                <h1>Húsvéti dinom-dánom</h1>
+                <p class="couponLeiras">Meglepetéés! kerüljön a kosárba a legjobb pólóink valamelyike és 10% kedvezményt kapsz hozzá! Ez a kupon egy póló kategóriájú termékre érvényes. Felhasználható 2025. április 31-ig</div>
+                <button>Beváltom</button>
+                <div class="kep">
+                    <img src="../Home képek/homelanding.jpg" alt="" class="couponPic">
+                    <p class="kedvezmeny">10%</p>
+                </div>
+        </div>
+        
+        <div class="couponMain">
+            <div class="szoveg">
+                <h1>Kari ari csak neked számodra!</h1>
+                <p class="couponLeiras">Az karácsony a szeretet ünnepe. Lepj meg valakit egy csodálatos ajándékkal amit minden nap magán hordhat! Ezzel a kuponnal 15% kedvezményt biztosítunk bármely termék árából a webshopon. Felhasználható 2024. december 31-ig.</div>
+                <button>Beváltom</button>
+                <div class="kep">
+                    <img src="../Home képek/homelanding.jpg" alt="" class="couponPic">
+                    <p class="kedvezmeny">15%</p>
+                </div>
+        </div>
+
     </div>
 
     
@@ -153,6 +190,6 @@
 
     </footer>
 
-<script src="../main.js"></script>
+<script src="../hambi.js"></script>
 </body>
 </html>
