--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p class="oldalnev">Csudajó Áruház</p>
                 <p class="motto">Fedezd fel a lehetetlent!</p>
             </div>
-            <div class="hamburger" onclick="HambiLenyilas()">
+            <div class="hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -366,6 +366,7 @@
 
     </footer>
 
+<script src="./hambi.js"></script>
 <script src="./main.js"></script>
 </body>
 </html>
