IK-21, IK-26 Kisebb javítások és content kiegészítések

--- a/HTML/coupons.html
+++ b/HTML/coupons.html
@@ -141,7 +141,7 @@
         <div class="couponMain">
             <div class="szoveg">
                 <h1>Húsvéti dinom-dánom</h1>
-                <p class="couponLeiras">Meglepetéés! kerüljön a kosárba a legjobb pólóink valamelyike és 10% kedvezményt kapsz hozzá! Ez a kupon egy póló kategóriájú termékre érvényes. Felhasználható 2025. április 31-ig</div>
+                <p class="couponLeiras">Meglepetéés! kerüljön a kosárba a legjobb pólóink valamelyike és 10% kedvezményt kapsz hozzá! Ez a kupon egy póló kategóriájú termékre érvényes. Nincs megszabva árminimum. Felhasználható 2025. április 31-ig.</div>
                 <button>Beváltom</button>
                 <div class="kep">
                     <img src="../Home képek/homelanding.jpg" alt="" class="couponPic">
