--- a/HTML/coupons.html
+++ b/HTML/coupons.html
@@ -119,21 +119,10 @@
         <div class="couponMain">
             <div class="szoveg">
                 <h1>Kari ari csak neked számodra!</h1>
-                <p class="couponLeiras">Az karácsony a szeretet ünnepe. Lepj meg valakit egy csodálatos ajándékkal amit minden nap magán hordhat! Ezzel a kuponnal 15% kedvezményt biztosítunk bármely termék árából a webshopon. Felhasználható 2024. december 31-ig.</div>
+                <p class="couponLeiras">Lepj meg valakit egy csodálatos ajándékkal amit minden nap magán hordhat! Ezzel a kuponnal 15% kedvezményt biztosítunk bármely termék árából a webshopon. Felhasználható 2024. december 31-ig.</div>
                 <button>Beváltom</button>
                 <div class="kep">
-                    <img src="../Home képek/homelanding.jpg" alt="" class="couponPic">
-                    <p class="kedvezmeny">15%</p>
-                </div>
-        </div>
-
-        <div class="couponMain">
-            <div class="szoveg">
-                <h1>Kari ari csak neked számodra!</h1>
-                <p class="couponLeiras">Az karácsony a szeretet ünnepe. Lepj meg valakit egy csodálatos ajándékkal amit minden nap magán hordhat! Ezzel a kuponnal 15% kedvezményt biztosítunk bármely termék árából a webshopon. Felhasználható 2024. december 31-ig.</div>
-                <button>Beváltom</button>
-                <div class="kep">
-                    <img src="../Home képek/homelanding.jpg" alt="" class="couponPic">
+                    <img src="../kupon_kepek/karacsony.jpg" alt="" class="couponPic">
                     <p class="kedvezmeny">15%</p>
                 </div>
         </div>
@@ -144,22 +133,10 @@
                 <p class="couponLeiras">Meglepetéés! kerüljön a kosárba a legjobb pólóink valamelyike és 10% kedvezményt kapsz hozzá! Ez a kupon egy póló kategóriájú termékre érvényes. Nincs megszabva árminimum. Felhasználható 2025. április 31-ig.</div>
                 <button>Beváltom</button>
                 <div class="kep">
-                    <img src="../Home képek/homelanding.jpg" alt="" class="couponPic">
+                    <img src="../kupon_kepek/husvet.jpg" alt="" class="couponPic">
                     <p class="kedvezmeny">10%</p>
                 </div>
         </div>
-        
-        <div class="couponMain">
-            <div class="szoveg">
-                <h1>Kari ari csak neked számodra!</h1>
-                <p class="couponLeiras">Az karácsony a szeretet ünnepe. Lepj meg valakit egy csodálatos ajándékkal amit minden nap magán hordhat! Ezzel a kuponnal 15% kedvezményt biztosítunk bármely termék árából a webshopon. Felhasználható 2024. december 31-ig.</div>
-                <button>Beváltom</button>
-                <div class="kep">
-                    <img src="../Home képek/homelanding.jpg" alt="" class="couponPic">
-                    <p class="kedvezmeny">15%</p>
-                </div>
-        </div>
-
     </div>
 
     
