--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -65,6 +65,15 @@
     <div class="FoDiv">
         <div class="BalBlogDiv">
             <h2>Blog</h2>
+            <div class="BalRendezesNagyDiv">
+                <h3 class="BalRendezesHead">Rendezés:</h3>
+                <select name="BalBlogKeresesSelectNev" id="BalBlogKeresesSelectID">
+                    <option value="BalUjOPT">Legújabbak</option>
+                    <option value="BalRegiOPT">Legrégibbek</option>
+                    <option value="BalNepszeruOPT">Népszerűek</option>
+                    <option value="BalOlvasottakOPT">Legolvasottabbak  </option>
+                </select>
+            </div>
             <a href="">            
             <span class="BalBlogCimSpan">
                 <p class="BalBlogCímP">Új ajánlatok</p>
@@ -98,12 +107,41 @@
             <a href="">
                 <span class="BalBlogCimSpan">
                     <p class="BalBlogCímP">Hatalmas Karácsonyi Akciók</p>
-                    <p class="BalBlogDatumP">2024.12.24</p>
+                    <p class="BalBlogDatumP">2024.11.11</p>
                 </span>
                 <div class="BalKepDivClass">
                     <img src="../Blog képek/aaa3.jfif" class="BalKepClass" alt="" srcset="">
                     <p class="BlogP">Kedves Vásárlóink!
                         Az év legvarázslatosabb időszaka elérkezett, és mi szeretnénk segíteni abban, hogy az ünnepi készülődés még különlegesebb legyen! 🌟 A Csudajó Áruház webshopjában most indulnak a Karácsonyi Akcióink, ahol fantasztikus kedvezményekkel várunk Titeket!
+                    </p>
+                    <hr>
+                </div>
+            </a>
+
+            <a href="">
+                <span class="BalBlogCimSpan">
+                    <p class="BalBlogCímP">Újdonságok</p>
+                    <p class="BalBlogDatumP">2024.10.04</p>
+                </span>
+                <div class="BalKepDivClass">
+                    <img src="../Blog képek/ruha5.jpg" class="BalKepClass" alt="" srcset="">
+                    <p class="BlogP">Kedves Vásárlóink!
+                        Itt mindent megtalálsz, amire szükséged van, hogy egyszerűbbé tedd a vásárlást és friss híreket kapj legújabb termékeinkről. Akár divat, technológia, otthoni kiegészítők, vagy ajándékötletek – nálunk biztosan rátalálsz a tökéletes darabra. Ne hagyd ki heti akcióinkat és különleges ajánlatainkat sem! Tarts velünk és fedezd fel a legújabb trendeket, hogy mindig egy lépéssel előrébb járhass a vásárlásban.
+                    </p>
+                    <hr>
+                </div>
+            </a>
+
+            
+            <a href="">
+                <span class="BalBlogCimSpan">
+                    <p class="BalBlogCímP">Törzsvársárlói kedvezmények</p>
+                    <p class="BalBlogDatumP">2024.10.04</p>
+                </span>
+                <div class="BalKepDivClass">
+                    <img src="../Blog képek/ruha6.jpg" class="BalKepClass" alt="" srcset="">
+                    <p class="BlogP">Kedves Vásárlóink!
+                        Ha már törzsvásárlónk vagy, akkor jó híreink vannak számodra! Mostantól még nagyobb kedvezményekkel kedveskedünk neked, hogy még többet spórolhass a kedvenc termékeid vásárlásakor. Minden egyes vásárlással gyűjtött pontjaidat felhasználhatod, ráadásul exkluzív akcióink és VIP ajánlataink is elérhetők számodra. 
                     </p>
                     <hr>
                 </div>
@@ -127,8 +165,8 @@
                 <img src="../Blog képek/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.jpg" class="JobbKepClass" alt="" srcset="">
                 <div class="JobbKicsiNagyDiv">
                     <div class="JobbKicsiBal">
-                        <h3>Blog címe</h3>
-                        <h4>Dátuma</h4>
+                        <h3>Kuponok és akciók</h3>
+                        <h4>2019. 03. 22.</h4>
                     </div class="JobbKicsiBal">
                     <div class="JobbKicsiJobb">
                         <button class="JobbKicsiGomb">READ MORE</button>
@@ -141,8 +179,8 @@
                 <img src="../Blog képek/ruha3.jpg" class="JobbKepClass" alt="" srcset="">
                 <div class="JobbKicsiNagyDiv">
                     <div class="JobbKicsiBal">
-                        <h3>Blog címe</h3>
-                        <h4>Dátuma</h4>
+                        <h3>Bábúk ilyen sapkával rajtuk</h3>
+                        <h4>2021. 08. 11</h4>
                     </div class="JobbKicsiBal">
                     <div class="JobbKicsiJobb">
                         <button class="JobbKicsiGomb">READ MORE</button>
@@ -155,8 +193,50 @@
                 <img src="../Blog képek/ruha4.jpg" class="JobbKepClass" alt="" srcset="">
                 <div class="JobbKicsiNagyDiv">
                     <div class="JobbKicsiBal">
-                        <h3>Blog címe</h3>
-                        <h4>Dátuma</h4>
+                        <h3>Elköltöztünk</h3>
+                        <h4>2021. 07. 02</h4>
+                    </div class="JobbKicsiBal">
+                    <div class="JobbKicsiJobb">
+                        <button class="JobbKicsiGomb">READ MORE</button>
+                    </div>
+                </div>
+                <hr>
+                <p class="hidden">a</p>
+            </div>
+            <div class="JobbKepDivClass">
+                <img src="../Blog képek/ruha7.jpg" class="JobbKepClass" alt="" srcset="">
+                <div class="JobbKicsiNagyDiv">
+                    <div class="JobbKicsiBal">
+                        <h3>Limitált ruhák</h3>
+                        <h4>2020. 10. 28.</h4>
+                    </div class="JobbKicsiBal">
+                    <div class="JobbKicsiJobb">
+                        <button class="JobbKicsiGomb">READ MORE</button>
+                    </div>
+                </div>
+                <hr>
+                <p class="hidden">a</p>
+            </div>
+            <div class="JobbKepDivClass">
+                <img src="../Blog képek/webshop.png" class="JobbKepClass" alt="" srcset="">
+                <div class="JobbKicsiNagyDiv">
+                    <div class="JobbKicsiBal">
+                        <h3>WEBSHOP</h3>
+                        <h4>2024. 12. 08</h4>
+                    </div class="JobbKicsiBal">
+                    <div class="JobbKicsiJobb">
+                        <button class="JobbKicsiGomb">READ MORE</button>
+                    </div>
+                </div>
+                <hr>
+                <p class="hidden">a</p>
+            </div>
+            <div class="JobbKepDivClass">
+                <img src="../Blog képek/ruha8.jpg" class="JobbKepClass" alt="" srcset="">
+                <div class="JobbKicsiNagyDiv">
+                    <div class="JobbKicsiBal">
+                        <h3>Új nadrágok</h3>
+                        <h4>2019. 09. 09</h4>
                     </div class="JobbKicsiBal">
                     <div class="JobbKicsiJobb">
                         <button class="JobbKicsiGomb">READ MORE</button>
