IK-26 további kuponok elkészítése

--- a/HTML/coupons.html
+++ b/HTML/coupons.html
@@ -137,6 +137,16 @@
                     <p class="kedvezmeny">10%</p>
                 </div>
         </div>
+
+        <div class="couponMain">
+            <div class="szoveg">
+                <h1>Black friday!!!</h1>
+                <p class="couponLeiras">Rengeteg ajánlattal és hatalmas akciókkal készül a webshopunk! Szerezz be most pólót, kabátot, sapkát és még sok mást akár 40% kedvezménnyel!</div>
+                <button>Beváltom</button>
+                <div class="kep">
+                    <img src="../kupon_kepek/feketePentek.jpg" alt="" class="couponPic">
+                </div>
+        </div>
     </div>
 
     
