Slider újrakódolása, képek beillesztése, kiskártyák elkezdése

--- a/home.html
+++ b/home.html
@@ -119,8 +119,9 @@
      <div id="slider" class="slider">
         <div class="wrapper">
           <div id="slides" class="slides">
-           <span class="slide"><img src="./Home képek/homelanding.jpg" alt=""></span>
-           <span class="slide"><img src="./Home képek/homelanding.jpg" alt=""></span>
+           
+           <span class="slide"><img src="./Home képek/meganfox.jpg" alt=""></span>
+           <span class="slide"><img src="./Home képek/ralphhome.png" alt=""></span>
            <span class="slide"><img src="./Home képek/homelanding.jpg" alt=""></span>
           </div>
         </div>
@@ -128,7 +129,14 @@
         <a id="next" class="control next"></a>
       </div>
 
+      <!--kiskartyak-->
+      <div class="container">
 
+            <img id="kep" src="./Home képek/menssunglasses.png" alt="">
+            <img id="kep" src="./Home képek/menssunglasses.png" alt="">
+            <img id="kep" src="./Home képek/menssunglasses.png" alt="">
+
+      </div>
 
 <!--footer-->
 
